# Cinema

./: README.md
Cinema/: CMakeLists.txt  in.txt
Cinema/program/: CMakeLists.txt
Cinema/program/src/: main.cpp
